--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -80,11 +80,11 @@ $media-medium-max:  64rem; // 1024px
 $media-large-max:   90rem; // 1440px ~14"
 $media-xlarge-max:  120rem; //
 
-@mixin transition($property, $duration) {
-  -webkit-transition: $property $duration;
-  -ms-transition: $property $duration;
-  -o-transition: $property $duration;
-  transition: $property $duration;
+@mixin transition($property, $duration, $easing) {
+  -webkit-transition: $property $duration $easing;
+  -ms-transition: $property $duration $easing;
+  -o-transition: $property $duration $easing;
+  transition: $property $duration $easing;
 }
 
 @mixin linear-gradient($fromColor, $toColor) {
@@ -105,7 +105,6 @@ $media-xlarge-max:  120rem; //
 @import 'forms';
 @import 'tables';
 @import 'student_dashboard';
-@import 'predictor';
 @import 'timeline';
 @import 'analytics';
 @import 'background';
@@ -120,6 +119,7 @@ $media-xlarge-max:  120rem; //
 @import 'rubrics';
 @import 'collapse';
 @import 'badges';
+@import 'predictor';
 
 /* override foundation body color */
 body {
